@@ -1,3 +1,7 @@
+2013-09-02  Jan Hubicka  <jh@suse.cz>
+
+	* gcc.dg/tree-ssa/fnsplit-1.c: New testcase.
+
 2013-09-02  Martin Jambor  <mjambor@suse.cz>
 
 	PR ipa/58106
